--- a/css/app.css
+++ b/css/app.css
@@ -13,7 +13,9 @@ img {
     max-width: 100%;
 }
 
-
+a {
+    color: black;
+}
 /* Background */
 
 .background {
@@ -48,6 +50,9 @@ img {
     width: 30%;
     min-width: 300px;
     background-color: white;
+    border-right: 1px solid #E9EDEF;
+    display: flex;
+    flex-direction: column;
 }
 
 .sidebar-header {
@@ -101,6 +106,80 @@ img {
     font-size: 14px;
 }
 
+.sidear-contacts {
+    display: contents;
+}
+
+.sidebar-contancts__search {
+    padding: 6px 12px;
+    position: relative;
+    border-bottom: 1px solid #E9EDEF;
+}
+
+#contact-research {
+    padding: 13px 5px 13px 65px;
+    border-radius: 5px;
+    border: 0;
+    width: 100%;
+    background-color: #F0F2F5;
+}
+
+.sidear-contacts__search-icon {
+    color: #54656F;
+    position: absolute;
+    left: 30px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 14px;
+}
+
+.sidebar-contacts__list {
+    overflow: auto;
+    flex-grow: 1;
+}
+
+.sidebar-contacts__contact {
+    position: relative;
+    display: flex;
+    padding: 10px 13px;
+    align-items: center;
+    gap: 15px;
+}
+
+.sidebar-contacts__contact::after{
+    content: '';
+    position: absolute;
+    height: 1px;
+    background-color: #E9EDEF;
+    bottom: 0;
+    left: calc(13px + 50px + 15px);
+    right: 0;
+}
+
+.contact__avatar {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
+}
+
+.contact__text{
+    flex-grow: 1;
+}
+
+.contact__name {
+    font-size: 17px;
+}
+
+.contact__last-message {
+    font-size: 13px;
+    color: #8696A0;
+}
+
+.contact__time {
+    font-size: 12px;
+    color: #8696A0;
+}
 /* Conversation panel */
 
 .conversation-panel {
