--- a/css/app.css
+++ b/css/app.css
@@ -64,7 +64,8 @@ a {
 }
 
 .sidebar-header__profile-avatar {
-    width: 40px;
+    min-width: 40px;
+    max-width: 40px;;
     height: 40px;
     border-radius: 50%;
     overflow: hidden;
@@ -158,10 +159,16 @@ a {
 
 .contact__avatar {
     border-radius: 50%;
-    width: 50px;
+    min-width: 50px;
+    max-width: 50px;
     height: 50px;
     overflow: hidden;
 }
+
+.contact__avatar img {
+    object-fit: fill;
+}
+
 
 .contact__text{
     flex-grow: 1;
@@ -179,6 +186,7 @@ a {
 .contact__time {
     font-size: 12px;
     color: #8696A0;
+    white-space: nowrap;
 }
 /* Conversation panel */
 
