--- a/css/app.css
+++ b/css/app.css
@@ -314,10 +314,12 @@ i {
 
 .conversation-messages__message {
     padding: 10px;
+    max-width: 300px;
     border-radius: 5px;
     margin-bottom: 15px;
     filter: drop-shadow(0px 2px 3px #b6b5b5);;
     position: relative;
+    padding-right: 50px;
 }
 
 .conversation-messages__message--received {
@@ -363,6 +365,14 @@ i {
     position: absolute;
     top: 0;
     left: 100%;
+}
+
+.conversation-messages__message-date {
+    position: absolute;
+    bottom: 2px;
+    right: 4px;
+    font-size: 11px;
+    color: #8696A0;
 }
 
 .conversation-input-bar {
